update disabled class in employee picks

--- a/client/webUI/src/app/pages/admin/dashboard/dashboard.component.css
+++ b/client/webUI/src/app/pages/admin/dashboard/dashboard.component.css
@@ -32,3 +32,12 @@
     width: 100%;
     overflow: auto;
   }
+
+
+  .employees{
+    font-size: 50px;
+  }
+
+  .products{
+    font-size: 50px;
+  }
