--- a/client/webUI/src/app/pages/admin/employee-picks/employee-picks.component.css
+++ b/client/webUI/src/app/pages/admin/employee-picks/employee-picks.component.css
@@ -7,7 +7,7 @@
     padding: 3px 7px;
 }
 
-/* delete icon */
-button:disabled .delete-icon {
-    fill: gray !important; /* Change to desired color */
+.disabled {
+    pointer-events: none;    
   }
+
