--- a/client/webUI/src/app/pages/admin/employee-picks/employee-picks.component.html
+++ b/client/webUI/src/app/pages/admin/employee-picks/employee-picks.component.html
@@ -67,7 +67,7 @@
             Employee Code
           </th>
           <td mat-cell *matCellDef="let element">
-            {{ element.empCode }}
+            {{ element.employeeCode }}
           </td>
         </ng-container>
         <!-- /employee code -->
