--- a/client/webUI/src/app/pages/admin/generate-emp-code/generate-emp-code.component.css
+++ b/client/webUI/src/app/pages/admin/generate-emp-code/generate-emp-code.component.css
@@ -26,4 +26,30 @@
   .primary-admin{
     border-radius: 5px;
   }
+
+  .rounded-toggle mat-button-toggle {
+    border-radius: 50px !important; /* Ensures individual buttons are rounded */
+    padding: 8px 10px; /* Adjust padding */ 
+    
+  }
+
+  .mat-button-toggle-group {
+    border-radius: 50px !important;
+    background-color: #e8e8e8 !important;   
+  }
+
+  /* Apply orange background when selected */
+.toggle-option.mat-button-toggle-checked {
+  background-color: #fff !important;
+  color: black !important;
+  border-radius: 50px !important;
+  margin-top: 4px !important;
+  margin-bottom: 4px !important;
+  margin-left: 4px !important;
+}
+
+/* Ensure unselected button doesn't shift */
+.toggle-option:not(.mat-button-toggle-checked) {
+  line-height: 1 !important; /* Prevents text shifting */
+}
   
