--- a/client/webUI/src/app/pages/admin/generate-emp-code/generate-emp-code.component.html
+++ b/client/webUI/src/app/pages/admin/generate-emp-code/generate-emp-code.component.html
@@ -135,7 +135,7 @@
           </th>
           <td mat-cell *matCellDef="let element">
             <div class="p-3">
-              <mat-button-toggle-group
+              <mat-button-toggle-group [hideSingleSelectionIndicator]="true" appearance="legacy" class="rounded-toggle"
                 name="fontStyle"
                 aria-label="Font Style"
                 [value]="element.isAdmin ? 'yes' : 'no'"
@@ -144,12 +144,12 @@
                   'opacity-fade': element.isPrimaryAdmin
                 }"
               >
-                <mat-button-toggle
+                <mat-button-toggle class="toggle-option"
                   value="no"
                   [disabled]="element.isPrimaryAdmin"
                   >No</mat-button-toggle
                 >
-                <mat-button-toggle value="yes">Yes</mat-button-toggle>
+                <mat-button-toggle class="toggle-option" value="yes">Yes</mat-button-toggle>
               </mat-button-toggle-group>
             </div>
           </td>
