--- a/client/webUI/src/app/pages/admin/generate-emp-code/generate-emp-code.component.css
+++ b/client/webUI/src/app/pages/admin/generate-emp-code/generate-emp-code.component.css
@@ -43,13 +43,19 @@
   background-color: #fff !important;
   color: black !important;
   border-radius: 50px !important;
-  margin-top: 4px !important;
-  margin-bottom: 4px !important;
-  margin-left: 4px !important;
+  margin: 4px !important;  
 }
 
 /* Ensure unselected button doesn't shift */
 .toggle-option:not(.mat-button-toggle-checked) {
   line-height: 1 !important; /* Prevents text shifting */
 }
+
+.toggle-option{
+  display: flex;
+  align-items: center; /* Keeps text vertically centered */
+  justify-content: center;
+}
+
+
   
