changes in copy icon

--- a/client/webUI/src/app/pages/admin/employee-picks/employee-picks.component.css
+++ b/client/webUI/src/app/pages/admin/employee-picks/employee-picks.component.css
@@ -11,3 +11,25 @@
     pointer-events: none;    
   }
 
+  /* copy */
+.copy-text{
+    font-size: 20px;    
+    right: 10px;  
+    border-radius: 5px;  
+    padding: 3px 7px;
+    font-weight: 500;
+    bottom: 1px;
+  }
+
+  mat-icon.copy-icon:hover{
+    cursor: pointer;
+  }
+
+  mat-icon.copy-icon{
+    position: absolute;
+    right: 10px;
+    top: 10px;
+    font-size: 20px !important;
+  }
+  /* /copy */
+
