--- a/client/webUI/src/app/pages/admin/settings/settings.component.css
+++ b/client/webUI/src/app/pages/admin/settings/settings.component.css
@@ -1,10 +1,11 @@
 /* copy */
 .copy-text{
     font-size: 20px;    
-    right: 10px;  
+    right: 29px;  
     border-radius: 5px;  
     padding: 3px 7px;
     font-weight: 500;
+    bottom: 1px;
   }
 
   mat-icon.copy-icon:hover{
@@ -14,7 +15,8 @@
   mat-icon.copy-icon{
     position: absolute;
     right: 10px;
-    top: 10px;   
+    top: 10px;
+    font-size: 20px;   
   }
   /* /copy */
 
