--- a/client/webUI/src/app/pages/admin/settings/settings.component.html
+++ b/client/webUI/src/app/pages/admin/settings/settings.component.html
@@ -75,7 +75,7 @@
               *ngIf="copiedMap.get(element.employeeCode)"
               class="copy-text fs-12 position-absolute bg-dark text-white"
             >
-              copied
+              copied !
             </div>
           </td>
         </ng-container>
