--- a/client/webUI/src/app/pages/admin/employee-picks/employee-picks.component.html
+++ b/client/webUI/src/app/pages/admin/employee-picks/employee-picks.component.html
@@ -66,8 +66,23 @@
           <th mat-header-cell *matHeaderCellDef class="fw-bold bg-light">
             Employee Code
           </th>
-          <td mat-cell *matCellDef="let element">
+          <td mat-cell *matCellDef="let element" class="position-relative">
             {{ element.employeeCode }}
+            <span class="ms-2"
+              ><mat-icon
+                matSuffix
+                cdkCopyToClipboard="{{ element.employeeCode }}"
+                (click)="copied(element.employeeCode)"
+                class="copy-icon"
+                >content_copy</mat-icon
+              ></span
+            >
+            <div
+              *ngIf="copiedMap.get(element.employeeCode)"
+              class="copy-text fs-12 position-absolute bg-dark text-white"
+            >
+              copied !
+            </div>
           </td>
         </ng-container>
         <!-- /employee code -->
