--- a/client/webUI/src/app/pages/admin/generate-emp-code/generate-emp-code.component.css
+++ b/client/webUI/src/app/pages/admin/generate-emp-code/generate-emp-code.component.css
@@ -13,8 +13,9 @@
 
   mat-icon.copy-icon{
     position: absolute;
-    right: 10px;
-    top: 10px;
+    right: 5px;
+    top: 5px;
+    font-size: 20px !important;
   }
   /* /copy */
 
