--- a/client/webUI/src/app/pages/admin/gift-inventory/gift-inventory.component.css
+++ b/client/webUI/src/app/pages/admin/gift-inventory/gift-inventory.component.css
@@ -9,6 +9,7 @@
     border-radius: 5px;  
     padding: 3px 7px;
     font-weight: 500;
+    bottom: 2px;
   }
 
   mat-icon.copy-icon:hover{
@@ -17,7 +18,8 @@
 
   mat-icon.copy-icon{
     position: absolute;
-    right: 10px;
-    top: 10px;
+    right: 5px;
+    top: 5px;
+    font-size: 20px !important;
   }
   /* /copy */
